<resources>
    <string name="app_name">PetShop</string>
    <string name="join">Join</string>
    <string name="login">Login</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registracija">Registracija</string>
    <string name="listFavorites">Omiljeni oglasi</string>
    <string name="listAll">Svi oglasi</string>
    <string name="vrsta">Vrsta :</string>
    <string name="rasa">Rasa :</string>
    <string name="datum">Datum rođenja :</string>
    <string name="vlasnik">Vlasnik :</string>
    <string name="dodatno">Dodatne informacije :</string>
    <string name="omiljeno">dodaj u omiljeno</string>
    <string name="kupovina">kupi</string>
    <string name="cena">Cena :</string>
    <string name="pol">Pol :</string>
    <string name="dodajsliku">dodaj sliku</string>
    <string name="dodajoglas">dodaj oglas</string>
    <string name="datumprimer">01/01/2010</string>
    <string name="title_activity_ad_list">AdListActivity</string>
    <string name="tab_text_1">Svi oglasi</string>
    <string name="tab_text_2">Omiljeni oglasi</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pretraga">pretraga</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="PRODATO">PRODATO</string>
    <string name="neomiljeno">Izbaci iz omiljenih</string>
    <string name="popup_buy">Potvdite kupovinu</string>
    <string name="cancel">otkaži</string>
    <string name="confirm">Potvrdi</string>
    <string name="datumddavanja">Datum dodavanja:</string>
    <string name="comment_input">Unesite komentar</string>
    <string name="dodaj">dodaj</string>
</resources>
