<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="6">

    <ImageView
        android:layout_weight="3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/icon_paw" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:id="@+id/bLogin"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join"
            android:id="@+id/bJoin"/>
    </LinearLayout>

</LinearLayout>